--- a/k8s-specifications/db-service.yaml
+++ b/k8s-specifications/db-service.yaml
@@ -1,16 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: db
   name: db
   namespace: vote
 spec:
   type: ClusterIP
   ports:
-  - name: "db-service"
-    port: 5432
-    targetPort: 5432
+    - port: 5432
+      targetPort: 5432
   selector:
-    app: db
-  
+    app: voting-app
+    name: db-pod
