--- a/k8s-specifications/redis-service.yaml
+++ b/k8s-specifications/redis-service.yaml
@@ -1,16 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: redis
   name: redis
   namespace: vote
 spec:
   type: ClusterIP
   ports:
-  - name: "redis-service"
-    port: 6379
-    targetPort: 6379
+    - port: 6379
+      targetPort: 6379
   selector:
-    app: redis
-  
+    app: voting-app
+    name: redis-pod
