--- a/k8s-specifications/vote-service.yaml
+++ b/k8s-specifications/vote-service.yaml
@@ -1,17 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: vote
-  name: vote
+  name: vote-service
   namespace: vote
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - name: "vote-service"
-    port: 5000
-    targetPort: 80
-    nodePort: 31000
+    - port: 80
+      targetPort: 80
+      nodePort: 31000
   selector:
-    app: vote
-  
+    app: voting-app
+    name: voting-pod
