--- a/result/Dockerfile
+++ b/result/Dockerfile
@@ -1,31 +1,22 @@
-FROM node:10-slim
+FROM node:16-alpine
 
-# add curl for healthcheck
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Add Tini for proper init of signals
-ENV TINI_VERSION v0.19.0
-ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
-RUN chmod +x /tini
+RUN apk update && \
+    apk upgrade && \
+    apk add --update-cache --upgrade tini && \
+    rm -rf /var/cache/apk/*
 
 WORKDIR /app
 
-# have nodemon available for local dev use (file watching)
-RUN npm install -g nodemon
+RUN npm install --global nodemon
 
-COPY package*.json ./
+COPY ["package.json", "yarn.lock", "./"]
 
-RUN npm ci \
- && npm cache clean --force \
- && mv /app/node_modules /node_modules
+RUN yarn install --pure-lockfile && \
+    mv /app/node_modules /node_modules
 
-COPY . .
 
-ENV PORT 80
+COPY [".", "."]
 
 EXPOSE 80
 
-CMD ["/tini", "--", "node", "server.js"]
+CMD ["tini", "--", "node", "server.js"]
