--- a/vote/Dockerfile
+++ b/vote/Dockerfile
@@ -1,24 +1,32 @@
-# Using official python runtime base image
-FROM python:3.9-slim
+FROM python:3.10-alpine
 
-# add curl for healthcheck
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONFAULTHANDLER=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONHASHSEED=random \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_DEFAULT_TIMEOUT=100 \
+    POETRY_VERSION=1.1.13 \
+    BUILD_PACKAGES='alpine-sdk linux-headers libffi-dev'
+
+RUN apk update && \
+    apk upgrade && \
+    apk add --no-cache --virtual .build-deps $BUILD_PACKAGES && \
+    rm -rf /var/cache/apk/*
+
+RUN pip install "poetry==$POETRY_VERSION"
 
 # Set the application directory
 WORKDIR /app
 
-# Install our requirements.txt
-COPY requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+COPY ["poetry.lock", "pyproject.toml", "./"]
 
-# Copy our code from the current folder to /app inside the container
-COPY . .
+RUN poetry config virtualenvs.create false && \
+    poetry install --no-interaction --no-ansi
 
-# Make port 80 available for links and/or publish
+COPY [".", "."]
+
 EXPOSE 80
 
-# Define our command to be run when launching the container
 CMD ["gunicorn", "app:app", "-b", "0.0.0.0:80", "--log-file", "-", "--access-logfile", "-", "--workers", "4", "--keep-alive", "0"]
