--- a/k8s-specifications/redis-deployment.yaml
+++ b/k8s-specifications/redis-deployment.yaml
@@ -1,9 +1,14 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: vote
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: voting-app-redis-deployment
   namespace: vote
-  labels:  
+  labels:
     app: voting-app
     type: redis
 spec:
