adjust k8s-specification's deployment resources

--- a/k8s-specifications/db-deployment.yaml
+++ b/k8s-specifications/db-deployment.yaml
@@ -39,11 +39,11 @@ spec:
               name: db-data
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "0.125"
-            limits:
-              memory: "265Mi"
+              memory: "512Mi"
               cpu: "0.250"
+            limits:
+              memory: "1Gi"
+              cpu: "0.512"
       volumes:
         - name: db-data
           emptyDir: {}
