--- a/k8s-specifications/worker-deployment.yaml
+++ b/k8s-specifications/worker-deployment.yaml
@@ -29,8 +29,8 @@ spec:
           image: muhmdraouf/voting_app_worker
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "0.125"
-            limits:
-              memory: "265Mi"
+              memory: "512Mi"
               cpu: "0.250"
+            limits:
+              memory: "1Gi"
+              cpu: "0.512"
