--- a/k8s-specifications/vote-deployment.yaml
+++ b/k8s-specifications/vote-deployment.yaml
@@ -31,8 +31,8 @@ spec:
             - containerPort: 80
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "0.125"
-            limits:
-              memory: "265Mi"
+              memory: "512Mi"
               cpu: "0.250"
+            limits:
+              memory: "1Gi"
+              cpu: "0.512"
